--- a/style/utils/global.scss
+++ b/style/utils/global.scss
@@ -1,7 +1,12 @@
-@import "./sections/header";
+
+@import "/style/sections/header";
 
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+}
+body{
+    margin: auto;
+
 }
